feat: adjust the spec & implement SDK
